<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#129AC7"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.deanc.digitalleashparentapp.MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#5DD396"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/get_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#3AA7C6"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/radius"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/get_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="#3AA7C6"
        android:inputType="number"
        android:textSize="20sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/latitude"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/get_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="#3AA7C6"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/get_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="#3AA7C6"
            android:inputType="numberSigned|numberDecimal"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/create"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_activity_buttons"
            android:onClick="create"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/check_status"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_activity_buttons"
            android:onClick="checkStatus"
            android:text="@string/check_status"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <Button
            android:id="@+id/update"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_activity_buttons"
            android:onClick="update"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </TableRow>


</LinearLayout>
