<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CF293F"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.example.deanc.digitalleashparentapp.MainActivity">

    <ImageView
        android:id="@+id/WelcomeScreen"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/statusfail1" />

    <TextView
        android:id="@+id/fail_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/not_in_zone"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/uhoh"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/out_of_zone_button"
        android:onClick="returnToMain"
        android:text="@string/uhoh"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/child_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <Button
        android:id="@+id/map"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/out_of_zone_button"
        android:onClick="mapIT"
        android:text="@string/map"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp" />


</LinearLayout>
